--- a/style.css
+++ b/style.css
@@ -11,15 +11,18 @@ body {
 /* Background Video */
 #bg-video {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
   min-width: 100%;
   min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  transform: translate(-50%, -50%);
   object-fit: cover;
-  z-index: -2;
-  opacity: 0.25;
   pointer-events: none;
 }
+
 
 /* Navigation Bar */
 nav {
